--- a/微信公众号文献链接整理.md
+++ b/微信公众号文献链接整理.md
@@ -1,5 +1,9 @@
 # 微信公众号文献链接整理
 
+## 抑癌蛋白p53突变跳反
+
+> 跳反是三国杀用语，就是跳反贼。
+
 https://mp.weixin.qq.com/s/GXFs8mAshOFBZhl4HuIKCg
 
 原文地址：https://www.sciencedirect.com/science/article/abs/pii/S1535610821000416?via%3Dihub
@@ -9,8 +13,15 @@ https://mp.weixin.qq.com/s/GXFs8mAshOFBZhl4HuIKCg
 突变后的p53蛋白不仅失去了抑癌能力，它还直接与先天免疫信号通路相互作用，抑制先天免疫信号的传递，和相关细胞因子的产生，给癌细胞营造免疫逃逸的环境，促进肿瘤的生长。
 
 
-
+## 单细胞测序替代方案，便宜又高分
 
 https://mp.weixin.qq.com/s/TSRgo113weFtFKWGFy5HxA
 
 没钱做单细胞？新替代方案不贵但发了10分
+
+
+
+
+
+
+
