--- a/微信公众号文献链接整理.md
+++ b/微信公众号文献链接整理.md
@@ -8,7 +8,7 @@ https://mp.weixin.qq.com/s/GXFs8mAshOFBZhl4HuIKCg
 
 原文地址：https://www.sciencedirect.com/science/article/abs/pii/S1535610821000416?via%3Dihub
 
-https://github.com/lifescience4ever/Files/blob/main/Mutant%20p53%20suppresses%20innate%20immune%20signaling%20to%20promote%20tumorigenesis.pdf
+[Mutant p53 suppresses innate immune signaling to promote tumorigenesis.pdf](https://github.com/lifescience4ever/Files/blob/main/Mutant%20p53%20suppresses%20innate%20immune%20signaling%20to%20promote%20tumorigenesis.pdf)
 
 《细胞》子刊：抑癌蛋白p53突变跳反！科学家首次发现，突变的p53不仅失职，还压制先天性免疫，促进肿瘤生长
 
