--- a/微信公众号文献链接整理.md
+++ b/微信公众号文献链接整理.md
@@ -21,7 +21,17 @@ https://mp.weixin.qq.com/s/TSRgo113weFtFKWGFy5HxA
 
 没钱做单细胞？新替代方案不贵但发了10分
 
+## Nat Med | NIH临床试验揭示碳水化合物与脂肪对人体的影响
 
+https://mp.weixin.qq.com/s/jU10kkhjUGUHci4doOFzwA
+
+肥胖在世界范围内日益流行，有很多文献甚至把肥胖归纳总结为一种流行病。据不完全统计，目前全世界大约有20亿肥胖人群，其中肥胖病人多达14亿。总的来说，导致肥胖的因素有两大方面：一方面，随着科技的不断进步，许许多多需要大量体力劳动的生产活动逐渐被机器取代，使人们日常消耗能量的活动越来越少；另一方面，人们通过饮食、过量地摄入能量；在这两方面的共同作用下，导致肥胖人群越来越多【1-2】。在我们日常饮食的食物中，碳水化合物与脂肪是两种较为主要且普遍的物质，两者对肥胖的发生占据主导位置。碳水化合物与脂肪谁对肥胖影响更多，在科学界一直存在着争议。支持肥胖的碳水化合物-胰岛素模型的科学家，倾向于高碳水化合物饮食导致胰岛素分泌，促进脂肪积累并增加能量摄入。因此，较于低脂肪、高碳水化合物的饮食，低碳水化合物饮食将会减少能量摄入【1-2】。然而，至今没有充分的证据验证这一假说。
+
+> 1.Hall, K. D. Did the food environmentcause the obesity epidemic? Obesity 26, 11–13 (2018).
+
+> 2.Ludwig, D. S. & Friedman, M. I.Increasing adiposity: consequence or cause of overeating? JAMA 311, 2167–2168(2014).
+
+近日，美国国立卫生研究院（NIH），糖尿病、消化和肾脏疾病研究所(NIDDK)Kevin D. Hall教授团队，以Article的形式在Nature Medicine期刊上，在线发表了题为“Effect of a plant-based, low-fat diet versus an animal-based, ketogenic diet on ad libitum energy intake”的文章，报道了低碳水化合物、低脂肪饮食对能量摄入、体重、血糖、血脂、胰岛素分泌及血压等方面的影响。
 
 
 
