--- a/微信公众号文献链接整理.md
+++ b/微信公众号文献链接整理.md
@@ -19,7 +19,7 @@ https://mp.weixin.qq.com/s/GXFs8mAshOFBZhl4HuIKCg
 
 https://mp.weixin.qq.com/s/TSRgo113weFtFKWGFy5HxA
 
-没钱做单细胞？新替代方案不贵但发了10分
+细胞毒性CD8 + T细胞介导的反应是适应性免疫的最重要组成部分，它决定了宿主免疫反应在消灭肿瘤细胞中的能力。由于肿瘤的内在和/或外在因素，CD8 + TILs的密度和功能可能受到损害，导致不良的预后和生存。而CD8 + TILs水平升高与CRC患者的总体生存期延长和无复发生存期有关，而与疾病阶段无关，这表明它们可能是预后改善的指标。
 
 ## Nat Med | NIH临床试验揭示碳水化合物与脂肪对人体的影响
 
