--- a/微信公众号文献链接整理.md
+++ b/微信公众号文献链接整理.md
@@ -33,6 +33,15 @@ https://mp.weixin.qq.com/s/jU10kkhjUGUHci4doOFzwA
 
 近日，美国国立卫生研究院（NIH），糖尿病、消化和肾脏疾病研究所(NIDDK)Kevin D. Hall教授团队，以Article的形式在Nature Medicine期刊上，在线发表了题为“Effect of a plant-based, low-fat diet versus an animal-based, ketogenic diet on ad libitum energy intake”的文章，报道了低碳水化合物、低脂肪饮食对能量摄入、体重、血糖、血脂、胰岛素分泌及血压等方面的影响。
 
+## DMSP大量存在于深海细菌中
+
+https://www.sohu.com/a/419358324_726570?sec=wd
+
+2020年9月16日，中国海洋大学海洋生命学院张晓华教授团队在国际著名综合性学术期刊Nature Communications上在线发表了题为“Bacteria are important dimethylsulfoniopropionate producers in marine aphotic and high-pressure environments”（细菌是深海无光和高压环境下的重要DMSP生产者）的最新研究成果。
+
+Dimethylsulfoniopropionate(DMSP)
+
+二甲基巯基丙酸内盐（dimethylsulphoniopropionate, DMSP）是地球上最丰富的有机硫分子之一，也是“冷室气体”二甲基硫（dimethyl sulphide, DMS）的最主要前体物质，在气候变化和全球硫循环中均扮演着重要角色。以前普遍认为生存于真光层的浮游微藻、大型藻类等真核生物才能合成DMSP，使得DMSP相关研究主要集中在上层海洋环境。课题组前期研究发现海洋异养细菌也可以合成DMSP，因此黑暗无光的深海环境中DMSP的产量、分布和环境效应亟需研究。在该项工作中，研究团队以马里亚纳海沟为研究对象，对水体和沉积物中DMSP浓度的垂直变化，以及DMSP产生和降解细菌的丰度、多样性及与环境因子的相关性进行了研究。研究结果表明，DMSP产生菌的丰度随水深增加而增加，在深海沉积物中达到最大值；而DMSP降解菌则呈相反趋势，暗示DMSP可能对深海微生物具有压力保护作用。研究团队进一步发现，细菌菌株在高压条件下的DMSP产量得到提高，且敲除DMSP合成基因可显著降低菌株在高压条件下的存活率，外源添加DMSP后菌株存活率得到恢复。该研究首次发现并证实DMSP在压力保护方面的新功能，指出异养细菌是深海海水和沉积物中DMSP的重要生产者，揭示了细菌参与深海硫循环的新过程机制。研究结果为重新估算全球DMSP的产量、通量及其气候效应提供了依据，对深入理解深海细菌在硫循环中的作用有着重要科学意义。
 
 
 
