--- a/微信公众号文献链接整理.md
+++ b/微信公众号文献链接整理.md
@@ -41,7 +41,7 @@ https://www.sohu.com/a/419358324_726570?sec=wd
 
 Dimethylsulfoniopropionate(DMSP)
 
-https://github.com/lifescience4ever/Files/blob/main/DMSP.png
+![image](https://github.com/lifescience4ever/Files/blob/main/DMSP.png)
 
 https://en.wikipedia.org/wiki/Dimethylsulfoniopropionate
 
