--- a/微信公众号文献链接整理.md
+++ b/微信公众号文献链接整理.md
@@ -47,6 +47,21 @@ https://en.wikipedia.org/wiki/Dimethylsulfoniopropionate
 
 二甲基巯基丙酸内盐（dimethylsulphoniopropionate, DMSP）是地球上最丰富的有机硫分子之一，也是“冷室气体”二甲基硫（dimethyl sulphide, DMS）的最主要前体物质，在气候变化和全球硫循环中均扮演着重要角色。以前普遍认为生存于真光层的浮游微藻、大型藻类等真核生物才能合成DMSP，使得DMSP相关研究主要集中在上层海洋环境。课题组前期研究发现海洋异养细菌也可以合成DMSP，因此黑暗无光的深海环境中DMSP的产量、分布和环境效应亟需研究。在该项工作中，研究团队以马里亚纳海沟为研究对象，对水体和沉积物中DMSP浓度的垂直变化，以及DMSP产生和降解细菌的丰度、多样性及与环境因子的相关性进行了研究。研究结果表明，DMSP产生菌的丰度随水深增加而增加，在深海沉积物中达到最大值；而DMSP降解菌则呈相反趋势，暗示DMSP可能对深海微生物具有压力保护作用。研究团队进一步发现，细菌菌株在高压条件下的DMSP产量得到提高，且敲除DMSP合成基因可显著降低菌株在高压条件下的存活率，外源添加DMSP后菌株存活率得到恢复。该研究首次发现并证实DMSP在压力保护方面的新功能，指出异养细菌是深海海水和沉积物中DMSP的重要生产者，揭示了细菌参与深海硫循环的新过程机制。研究结果为重新估算全球DMSP的产量、通量及其气候效应提供了依据，对深入理解深海细菌在硫循环中的作用有着重要科学意义。
 
+## Science：Warburg效应诞生100年之际，李明团队破解谜题，带来癌症治疗新方法
+
+https://mp.weixin.qq.com/s/Zj1mLHdSPLRhONQfkKiQqA
+
+2021年1月21日，美国纪念斯隆凯斯特琳癌症中心李明团队在 Science 杂志发表了题为：Glycolysis fuels phosphoinositide 3-kinase signaling to bolster T cell immunity 的研究论文。
+
+该研究为“Warburg效应”提出了一个新的答案。该研究表明，Warburg代谢与PI3激酶（PI3K）的活性之间有着先前未发现的联系，这种联系通过乳酸脱氢酶A（LDHA）实现。
+
+癌细胞可以利用Warburg代谢来维持PI3K信号通路的活性，从而确保癌细胞的持续生长和分裂。这一发现挑战了教科书上长期以来的观点，更重要的是，这项研究提出了一种有前景的癌症治疗方法，通过抑制乳酸脱氢酶A（LDHA）这一Warburg“开关”，可以抑制癌细胞生长，进而用于治疗癌症。
+
+
+
+
+
+
 
 
 
