--- a/微信公众号文献链接整理.md
+++ b/微信公众号文献链接整理.md
@@ -51,11 +51,30 @@ https://en.wikipedia.org/wiki/Dimethylsulfoniopropionate
 
 https://mp.weixin.qq.com/s/Zj1mLHdSPLRhONQfkKiQqA
 
+![Glycolysis fuels phosphoinositide 3-kinase signaling to bolster T cell immunity.pdf](https://github.com/lifescience4ever/Files/blob/main/Glycolysis%20fuels%20phosphoinositide%203-kinase%20signaling%20to%20bolster%20T%20cell%20immunity.pdf)
+
 2021年1月21日，美国纪念斯隆凯斯特琳癌症中心李明团队在 Science 杂志发表了题为：Glycolysis fuels phosphoinositide 3-kinase signaling to bolster T cell immunity 的研究论文。
 
 该研究为“Warburg效应”提出了一个新的答案。该研究表明，Warburg代谢与PI3激酶（PI3K）的活性之间有着先前未发现的联系，这种联系通过乳酸脱氢酶A（LDHA）实现。
 
 癌细胞可以利用Warburg代谢来维持PI3K信号通路的活性，从而确保癌细胞的持续生长和分裂。这一发现挑战了教科书上长期以来的观点，更重要的是，这项研究提出了一种有前景的癌症治疗方法，通过抑制乳酸脱氢酶A（LDHA）这一Warburg“开关”，可以抑制癌细胞生长，进而用于治疗癌症。
+
+## Science：利用CRISPR技术追踪癌细胞转移动态，为抗癌药物研究开辟新领域
+
+https://mp.weixin.qq.com/s/nMWGZ2y7WodwIid0Vhvxow
+
+【原文下载不到，ScienceMag开了权限也下载不到】
+
+## 让细菌化身移动硬盘！利用CIRSPR系统在活细胞DNA中存储信息
+
+https://mp.weixin.qq.com/s/BaHtwaz9H4sXyhUH1xR6bg
+
+## PNAS：众多论文恐变废纸，用了近十年的血脑屏障研究模型，被发现竟然是错的
+
+https://mp.weixin.qq.com/s/aYCSqnBCq3COZNdXKidgBA
+
+
+
 
 
 
