--- a/微信公众号文献链接整理.md
+++ b/微信公众号文献链接整理.md
@@ -1,5 +1,9 @@
 # 微信公众号文献链接整理
 
+## 江南大学刘立明教授课题组2020年工作总结
+
+https://mp.weixin.qq.com/s/LIfwtxVPUc416uYyDthrIA
+
 ## 抑癌蛋白p53突变跳反
 
 > 跳反是三国杀用语，就是表明自己反贼身份。
@@ -72,6 +76,31 @@ https://mp.weixin.qq.com/s/BaHtwaz9H4sXyhUH1xR6bg
 ## PNAS：众多论文恐变废纸，用了近十年的血脑屏障研究模型，被发现竟然是错的
 
 https://mp.weixin.qq.com/s/aYCSqnBCq3COZNdXKidgBA
+
+## Lancet | 重磅！10年随机对照研究发现2型糖尿病是可“治愈”的！
+
+https://mp.weixin.qq.com/s/YPzo8jfoo41NySwgm8gZ-Q
+
+## 假基因有真作用！余佳/张勇/石莉红合作揭秘假基因全新调控机制丨CellPress对话科学家
+
+https://mp.weixin.qq.com/s/FsBvzM_DxRX64CPKZiAd7A
+
+## 科研成果 | 尹航课题组发文揭示新冠病毒核衣壳蛋白相分离机制
+
+https://mp.weixin.qq.com/s/kFWE8uax9w8dKMbOGl__6w
+
+## Science：新冠期间过度消毒，可能会加速超级细菌的传播
+
+https://mp.weixin.qq.com/s/SBqR05cNQKd8-BswYwGggw
+
+## 百年老药结合纳米技术登上Nature Nanotechnology
+
+https://mp.weixin.qq.com/s/QGeEEKN4yTc78v3fkir_0w
+
+## 你见过6根手指的人吗？研究发现：他们有超出常人的能力
+
+https://mp.weixin.qq.com/s/I5pXK5OnBGuZz9QHnAJYuQ
+
 
 
 
